# cedar_ex

./: .gitignore  COMPATIBILITY_SUCCESS.md  FINAL_SUCCESS.md  PACKAGE_GUIDE.md  PACKAGE_SUCCESS.md  README.md  TOOLS_MIGRATION_SUCCESS.md  format.sh  main.py  main_webview.py  pa_simple.py  package_config.json  package_script_executor.py  pyproject.toml  readme.md  requirements.txt  run.sh  sidecar.py  start.bat  start.vbs
app_ui/: FormBuilder.py  LoggerManager.py  ScriptExecutor.py  ScriptManager.py
design/: README.md  layout-sketch.txt  vscode-script-workbench.html  vscode.md  workbench.css  workbench.js
electron/: electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
electron/src/main/: index.ts  sidecar.ts
electron/src/preload/: index.ts
electron/src/renderer/: env.d.ts  index.html
electron/src/renderer/src/: App.tsx
electron/src/renderer/src/components/: ActivityBar.tsx  (+13 more)
scripts/dedup/: form.yaml  main.py
scripts/test_new_architecture/: main.py
scripts/功能测试脚本/test_form/: README.md  form.yaml  main.py
scripts/功能测试脚本/test_new_architecture/: README.md  config.json  form.yaml  main.py
scripts/基础脚本/hello/: form.yaml  main.py
scripts/基础脚本/labelman数据分析/: README.md  config.json  form.yaml  main.py  utils.py
scripts/基础脚本/test_form/: main.py
scripts/潍坊歌尔CapHousing/图像全量图一致性比较/: README.md  config.json  form.yaml  main.py
scripts/潍坊歌尔CapHousing/图像分类整理/: README.md  config.json  form.yaml  main.py
test/: test.py
tools/: PACKAGE_GUIDE.md  README.md  pa_mac.py  pa_win.py
web/: app.js  index.html  style.css
(+2 files in other folders)
